# sfml-apps

./: .gitignore  CMakeLists.txt  README.md  maze.c
apps/maze/: CMakeLists.txt  main.cpp  reference_procedural.cpp
